Changes in IR System to improve Scalability & maintainability
Also modified search function in frontend.